--- a/apps/php/app-global.yaml
+++ b/apps/php/app-global.yaml
@@ -1,6 +1,6 @@
 kind: wasmer.io/App.v0
-name: db-latency
+name: php-db-latency
 owner: wasmer-tests
 package: .
 domains:
-- db-latency.wasmer.app
+ - php-db-latency.wasmer.app
