--- a/apps/php/app-global.yaml
+++ b/apps/php/app-global.yaml
@@ -3,4 +3,5 @@ name: php-db-latency
 owner: wasmer-tests
 package: .
 domains:
- - php-db-latency.wasmer.app
+ - php-db-latency.wasmer.dev
+ # - php-db-latency.wasmer.app
